# mcp-course

./: .gitignore  .gitmodules  CLAUDE.md  package-lock.json  package.json  pyproject.toml
.continue/mcpServers/: playwright-mcp.yaml
.continue/models/: local-models.yaml
.gradio/flagged/: dataset1.csv
projects/unit3/build-mcp-server/starter/: pyproject.toml  server.py
projects/unit3/github-actions-integration/starter/: server.py
projects/unit3/slack-notification/starter/: server.py
units/en/: _toctree.yml
units/en/unit1/: gradio-mcp.mdx  hf-mcp-server.mdx  mcp-clients.mdx  unit1-recap.mdx
wenming/: README.md  __init__.py  client_demo_simple.py  client_example.py  gradio-letter_counter-server.py  kicad_agent_server01.py  kicad_code_executor.py  local_llm_mcp_client.py  resources_server.py
wenming/my-agent/: agent.json  sentiment-agent.py
