[project]
name = "mcp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kicad-python>=0.5.0",
    "mcp[cli]>=1.17.0",
    "ollama>=0.6.0",
]

[project.scripts]
kicad-agent-server = "wenming.kicad_agent_server01:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wenming*"]
